<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.flipkart.poseidon</groupId>
    <artifactId>poseidon</artifactId>
    <version>5.14.1</version>

    <name>Poseidon</name>
    <description>A platform to build API applications that have to aggregate data from distributed services in an efficient way</description>

    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>core</module>
        <module>container</module>
        <module>api</module>
        <module>http-handler</module>
        <module>service-clients-core</module>
        <module>service-clients-gen</module>
        <module>service-clients-archetype</module>
        <module>log4j-access</module>
        <module>sample</module>
        <module>cadfael</module>
        <module>cadfael-maven-plugin</module>
        <module>sampleSC</module>
    </modules>

    <scm>
        <url>https://github.com/flipkart-incubator/poseidon</url>
        <connection>scm:git:https://github.com/flipkart-incubator/poseidon.git</connection>
        <developerConnection>scm:git:https://github.com/flipkart-incubator/poseidon.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>mrphoebs</id>
            <name>Suman Karthik</name>
            <email>suman.karthik@flipkart.com</email>
        </developer>
        <developer>
            <id>harshmoorjani</id>
            <name>Harsh Moorjani</name>
            <email>harshm@flipkart.com</email>
        </developer>
        <developer>
            <id>pmohankumar</id>
            <name>Mohan Kumar Pandian</name>
            <email>mohan.pandian@flipkart.com</email>
        </developer>
        <developer>
            <id>shrey-garg</id>
            <name>Shrey Garg</name>
            <email>shrey.garg@flipkart.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>


    <prerequisites>
        <maven>2.2.1</maven>
    </prerequisites>

    <properties>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <spring.version>5.3.18</spring.version>
        <hystrix.version>1.5.8</hystrix.version>
        <hystrix.metrics.plugin.version>1.4.0-RC5</hystrix.metrics.plugin.version>
        <jackson.version>2.13.2.20220328</jackson.version>
        <jetty.version>9.4.44.v20210927</jetty.version>
        <phantom.version>3.8.0</phantom.version>
        <brave.version>2.2.1</brave.version>
        <slf4j.api.version>1.7.9</slf4j.api.version>
        <log4j.version>2.17.1</log4j.version>
        <disruptor.version>3.3.4</disruptor.version>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.4</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.7</version>
            </dependency>
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>1.3.3</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>18.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.13</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpmime</artifactId>
                <version>4.3.6</version>
            </dependency>

            <!--Poseidon-->
            <dependency>
                <groupId>com.flipkart.poseidon</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--Poseidon-->

            <!-- Flipkart -->
            <dependency>
                <groupId>com.flipkart.phantom</groupId>
                <artifactId>runtime</artifactId>
                <version>${phantom.version}</version>
            </dependency>
            <dependency>
                <groupId>com.flipkart.phantom</groupId>
                <artifactId>task</artifactId>
                <version>${phantom.version}</version>
            </dependency>
            <dependency>
                <groupId>com.flipkart.lego</groupId>
                <artifactId>model</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.flipkart.lego</groupId>
                <artifactId>core</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.flipkart.hydra</groupId>
                <artifactId>hydra-dispatcher</artifactId>
                <version>1.3</version>
            </dependency>
            <!-- Flipkart -->

            <!-- Brave for distributed tracing -->
            <dependency>
                <groupId>com.github.kristofa</groupId>
                <artifactId>brave-impl</artifactId>
                <version>${brave.version}</version>
                <exclusions>
                    <exclusion> <!-- Remove Http client, we will add the correct version -->
                        <groupId>org.apache.httpcomponents</groupId>
                        <artifactId>httpclient</artifactId>
                    </exclusion>
                    <exclusion> <!-- Remove Http core, we will add the correct version -->
                        <groupId>org.apache.httpcomponents</groupId>
                        <artifactId>httpcore</artifactId>
                    </exclusion>
                    <exclusion>
                        <artifactId>slf4j-log4j12</artifactId>
                        <groupId>org.slf4j</groupId>
                    </exclusion>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- Brave for distributed tracing -->

            <!-- Spring -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-expression</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>5.4.2.Final</version>
            </dependency>
            <!-- Spring -->

            <!-- Jetty -->
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-servlet</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-webapp</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-util</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-servlets</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-rewrite</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <!-- Jetty -->

            <!-- Hystrix -->
            <dependency>
                <groupId>com.netflix.hystrix</groupId>
                <artifactId>hystrix-core</artifactId>
                <version>${hystrix.version}</version>
            </dependency>
            <dependency>
                <groupId>com.netflix.hystrix</groupId>
                <artifactId>hystrix-metrics-event-stream</artifactId>
                <version>${hystrix.version}</version>
            </dependency>
            <!--
           Codehale metrics plugin 1.5.0 is using PoolName as prefix for metrics.
           Ex: Instead of existing HystrixCommand.<cmdName>, it becomes <poolName>.<cmdName>
           This is a backward incompatible change, hence we are not using 1.5.0
           -->
            <dependency>
                <groupId>com.netflix.hystrix</groupId>
                <artifactId>hystrix-codahale-metrics-publisher</artifactId>
                <version>${hystrix.metrics.plugin.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.codahale.metrics</groupId>
                        <artifactId>metrics-core</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.netflix.hystrix</groupId>
                        <artifactId>hystrix-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- Hystrix -->

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <!-- Jackson -->

            <!-- Metrics -->
            <dependency>
                <groupId>com.codahale.metrics</groupId>
                <artifactId>metrics-core</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>com.codahale.metrics</groupId>
                <artifactId>metrics-healthchecks</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>com.codahale.metrics</groupId>
                <artifactId>metrics-servlets</artifactId>
                <version>3.0.2</version>
            </dependency>
            <dependency>
                <groupId>com.codahale.metrics</groupId>
                <artifactId>metrics-jetty9</artifactId>
                <version>3.0.2</version>
            </dependency>
            <!-- Metrics -->

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-jcl</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${disruptor.version}</version>
            </dependency>
            <!-- Logging -->

            <!-- Testing -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-api-mockito</artifactId>
                <version>1.6.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-module-junit4</artifactId>
                <version>1.6.2</version>
                <scope>test</scope>
            </dependency>
            <!-- Testing -->
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <systemPropertyVariables>
                        <environment>poseidon.validator.skip.unused_params</environment>
                    </systemPropertyVariables>
                    <reuseForks>true</reuseForks>
                    <forkCount>4</forkCount>
                    <argLine>-Xverify:none</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>clojars</id>
            <name>Clojars Maven Repository</name>
            <url>https://clojars.org/repo/</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <name>Maven Central Repo</name>
            <url>https://repo1.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>clojars</id>
            <name>Clojars repository</name>
            <url>https://clojars.org/repo</url>
        </repository>
    </distributionManagement>

</project>
